--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -3,21 +3,19 @@
 //
 
 //Typography
-@import url( 'https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i|Open+Sans:300,300i,400,400i,600,600i|Playfair+Display:400i|IM+Fell+French+Canon:400,400i');
+@import url( 'https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i');
 
-@import url('https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,400i,600,600i');
-
-$font-primary: 'Cormorant Garamond', serif;
+$font-primary: 'Open Sans', serif;
 $font-secondary: 'Open Sans', sans-serif;
-$font-tertiary: 'Playfair Display', serif;
-$font-quaternary: 'IM Fell French Canon', serif;
 $body-font-size: 18px;
 $nav-font-size: 16px;
 
 // Theme Colors
-$theme-main-color: #5b6063;
-$theme-secondary-color: #80c7cb;
+$theme-main-color: #5F6369;
+$theme-secondary-color: #007dc4;
 $theme-accent-color: $theme-secondary-color;
+$theme-tertiary-color: #4c6e81;
+$theme-quaternary-color: #003d60;
 $white: rgba(255, 255, 255, 1);
 $black: #212121;
 $dark-grey: #333;
